# sgvb_psd

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CITATION.cff  LICENSE  MANIFEST.in  README.md  api.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: api.doctree  environment.pickle  index.doctree
.doctrees/examples/: ET_example.doctree  simulation_example.doctree
.github/workflows/: docs.yml  docs_and_tests.yml  publish.yml  tests.yml
_sources/: api.md  api.rst  index.md
_sources/examples/: ET_example.ipynb  lisa_example.ipynb  paper_plots.md  simulation_example.ipynb
docs/: _config.yaml  _toc.yml  api.md  api.rst  conf.py  index.md  requirements.txt
docs/data/: et_data.h5  generate_data.py  generate_small_dataset.py
docs/examples/: ET_example.ipynb  ET_example.md  et_example.py  lisa_example.ipynb  paper_plots.md  plot_block.py  plot_gpu_vs_cpu.py  simulation_example.ipynb  simulation_example.md
docs/extras/: generate_small_dataset.py  make_logo.py
examples/: ET_example.html  lisa_example.html  paper_plots.html  simulation_example.html
src/sgvb_psd/: __init__.py  logging.py  lr_tuner.py  optimal_psd_estimator.py  plot_psd.py  psd_analyzer.py  psd_estimator.py  spec_model.py  spec_prep.py  spec_vi.py  true_var.py
src/sgvb_psd/backend/: __init__.py  analysis_data.py  bayesian_model.py  compute_psd.py  spec_model.py  spec_prep.py  spec_vi.py  vi_runner.py
src/sgvb_psd/postproc/: __init__.py  matplotlibrc  plot_coherence.py  plot_losses.py  plot_psd.py  plot_triangle_psd_coherence.py  psd_analyzer.py
src/sgvb_psd/utils/: __init__.py  periodogram.py  sim_varma.py  tf_utils.py  utils.py
src/sgvb_psd/utils/benchmark/: benchmark.py  cli.py
studies/: LVK.ipynb  et_study.py  gibbs.py  simulation_study.py  submit_et.sh
studies/et_study/: ET_noise_corr_psd_coh.py
studies/extras/mcmc_comparison/et/: plot_et_mcmc_results.py
studies/extras/mcmc_comparison/sim_study/: sgvb_vs_vnpc_simulation_comparison.py
studies/gibbs/: gibbs.py
studies/simulation_study/: true_var.py  true_vma.py  var2_256_errors_CI_coverage.py  vma1_256_errors_CI_coverage.py
tests/: conftest.py  test_benchmark.py  test_end_to_end.py  test_et.py  test_lnl.py  test_simulation.py  test_varma_data.py
