[train_models-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8.0",
    "wheel"
]
train_models-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["sgvb_psd*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["sgvb_psd.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)


[project]
name = "sgvb_psd"
version = "0.0.2"
requires-python = ">=3.8"
description = "A python package for estimating the power spectral density (PSD) of correlated multivariate detector noise using variational inference (VI)."

readme = "README.md"
authors = [
    {name = "Jianan Liu", email = "jliu812@aucklanduni.ac.nz" },
    {name = "Avi Vajpeyi", email = "avi.vajpeyi@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "tensorflow-probability>=0.24.0",
    "tf-keras",
    "pandas",
    "numpy",
    "matplotlib",
    "hyperopt",
    "colorama"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=4.1.0",
    "pre-commit",
    "flake8>=5.0.4",
    "black>=22.12.0",
    "jupyter-book",
    "sphinx-inline-tabs"
]

[tool.setuptools_scm]
version_file = "src/sbvb_psd/_version.py"


[project.urls]  # Optional
"Homepage" = "https://github.com/nz-gravity/sgvb_psd"
"Bug Reports" = "https://github.com/nz-gravity/sgvb_psd"
"Source" = "https://github.com/nz-gravity/sgvb_psd"



[tool.black]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | train_models
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79


[tool.pytest.ini_options]
testpaths = ["tests"]
